Added page with candidates account

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -22,6 +22,7 @@
 @import './worksheet-form/worksheet-form';
 @import './search-candidate/search-candidate';
 @import './candidates-profile/candidates-profile';
+@import './candidates-account/candidates-account';
 @import './applicant/applicant';
 @import './main-footer/main-footer';
 @import './modal/modal';
