--- a/src/components/worksheet-form/worksheet-form.scss
+++ b/src/components/worksheet-form/worksheet-form.scss
@@ -39,6 +39,29 @@
     display: none;
   }
 
+  &__select {
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.05em;
+    color: $black;
+    height: 40px;
+    max-width: 368px;
+    width: 100%;
+    border: 1px solid #E6ECF5;
+    padding: 5px 10px;
+
+    @media(max-width: 819px) {
+      max-width: 100%;
+    }
+
+    @media(max-width: 767px) {
+      height: 30px;
+      font-size: 14px;
+      line-height: 1.2;
+    }
+  }
+
   &__line {
     display: flex;
     align-items: center;
@@ -67,6 +90,10 @@
       }
     }
 
+    &.expectations {
+      margin-bottom: 34px;
+    }
+
     &.english-level {
       margin-bottom: 45px;
 
@@ -85,115 +112,16 @@
       }
     }
 
-    &.employment-type {
-      margin-bottom: 85px;
-
-      @media(max-width: 819px) {
-        margin-bottom: 50px;
-      }
-    }
-
-    &.soc-media {
-
-      &__item {
-        margin-bottom: 45px;
-        display: flex;
-        align-items: center;
-        flex-wrap: nowrap;
-
-        @media (max-width: 767px) {
-          margin-bottom: 26px;
-        }
-
-        &:before {
-          content: '';
-          display: block;
-          background-repeat: no-repeat;
-          background-position: center;
-        }
-
-        &-skype {
-          margin-left: -8px;
-          padding-top: 2px;
-
-          @media (max-width: 767px) {
-            margin-left: 0;
-            padding-top: 0;
-          }
-
-          &:before {
-            width: 16px;
-            height: 16px;
-            background-image: url(../images/worksheet-skype.svg);
-            padding-right: 20px;
-          }
-        }
-
-        &-telegram {
-          margin-left: -8px;
-
-          @media (max-width: 767px) {
-            margin-bottom: 26px;
-          }
-
-          &:before {
-            width: 17px;
-            height: 15px;
-            background-image: url(../images/worksheet-telegram.svg);
-            padding-right: 20px;
-            margin-top: -2px;
-          }
-        }
-
-        &-linkedin {
-          margin-left: -8px;
-
-          @media (max-width: 767px) {
-            margin-bottom: 26px;
-          }
-
-          &:before {
-            width: 17px;
-            height: 17px;
-            background-image: url(../images/worksheet-linkedin.svg);
-            padding-right: 20px;
-            margin-top: -4px;
-            margin-left: -1px;
-          }
-        }
-
-        &_github {
-          margin-left: -8px;
-
-          @media (max-width: 767px) {
-            margin-bottom: 26px;
-          }
-
-          &:before {
-            width: 18px;
-            height: 17px;
-            background-image: url(../images/worksheet-github.svg);
-            padding-right: 20px;
-            margin-left: -2px;
-          }
-        }
-      }
-    }
-
     &.last-line {
-      margin-bottom: 32px;
+      padding-bottom: 32px;
     }
   }
 
   &__label {
     font-weight: 600;
-    width: 262px;
     text-align: left;
-
-    @media(max-width: 991px) {
-      max-width: 262px;
-      width: 100%;
-    }
+    max-width: 262px;
+    width: 100%;
 
     @media(max-width: 819px) {
       max-width: 100%;
@@ -252,11 +180,24 @@
         background-repeat: no-repeat;
         background-position: center;
         transform: translateY(-50%);
-        top: 50%;
+        top: 55%;
 
         @media(max-width: 819px) {
           left: 0;
         }
+      }
+
+      &:after {
+        content: 'Виберiть файл з CV';
+        position: absolute;
+        left: 0;
+        bottom: -32px;
+        display: block;
+        font-weight: normal;
+        font-size: 12px;
+        line-height: 15px;
+        letter-spacing: 0.05em;
+        color: $lightgray;
       }
     }
 
@@ -303,7 +244,11 @@
 
   &__buttons {
     max-width: 368px;
-    margin: 0 auto;
+    margin: 84px auto 0;
+
+    @media(max-width: 819px) {
+      margin: 50px auto 0;
+    }
 
     @media(max-width: 575px) {
       max-width: 100%;
@@ -374,4 +319,65 @@
 
 .filter__relocation#employment-type {
   flex-direction: column;
+}
+
+.soc-media {
+  margin-bottom: 45px;
+
+  @media (max-width: 767px) {
+    margin-bottom: 26px;
+  }
+
+  &__item {
+    display: flex;
+    align-items: center;
+    flex-wrap: nowrap;
+
+    @media (max-width: 819px) {
+      justify-content: center;
+    }
+
+    &:before {
+      content: '';
+      display: block;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-right: 12px;
+    }
+
+    &-skype {
+      padding-top: 2px;
+      &:before {
+        width: 16px;
+        height: 16px;
+        background-image: url(../images/worksheet-skype.svg);
+      }
+    }
+
+    &-telegram {
+      &:before {
+        width: 17px;
+        height: 15px;
+        background-image: url(../images/worksheet-telegram.svg);
+      }
+    }
+
+    &-linkedin {
+      &:before {
+        width: 17px;
+        height: 17px;
+        background-image: url(../images/worksheet-linkedin.svg);
+        margin-top: -4px;
+      }
+    }
+
+    &-github {
+      &:before {
+        width: 18px;
+        height: 17px;
+        background-image: url(../images/worksheet-github.svg);
+        margin-right: 10px;
+      }
+    }
+  }
 }
