--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -5,10 +5,12 @@
             <ol>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 8 <a href="./registration.html">Реєстрацiя</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 1 <a href="./recruter-dashboard.html">Dashboard рекрутера</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер дивиться профайл кандидата</a></li>
-                <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер дивиться список кандидатiв</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 2 <a href="./recruter-search-candidate.html">Рекрутер переглядає профайл кандидата</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 3 <a href="./recruter-search-candidates-list.html">Рекрутер переглядає список кандидатiв</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 4 <a href="./recruitment-list.html">Рекрутер: список наймiв</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 7,8 <a href="./candidates-profile.html">Кандидатський профайл</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 9 <a href="./candidate-search-offers.html">Кандидат переглядає вакансiї</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 13 <a href="./candidates-account.html">Кандидатський аккаунт</a></li>
             </ol>
         </div>
     </div>
