--- a/src/pages/recruter-dashboard.hbs
+++ b/src/pages/recruter-dashboard.hbs
@@ -86,43 +86,45 @@
             <div class="dashboard__section added-vacancies">
                 <div class="h2 dashboard__section-title">Доданi вакансії</div>
                 <div class="fraimed-container dashboard__container">
-                    <div class="vacancy">
-                        <div class="candidate__first-line vacancy__line-first">
-                            <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
-                            <div class="candidate__date vacancy__date">12 Годин тому</div>
-                        </div>
-                        <div class="vacancy__line-second">
-                            <div class="vacancy__salary-location">
-                                <div class="vacancy__salary">2000-2500$</div>
-                                <div class="vacancy__location">Київ</div>
+                    <div class="vacancies__list">
+                        <div class="vacancy">
+                            <div class="candidate__first-line vacancy__line-first">
+                                <a href="#" class="base__title candidate__name">Senior Backend Developer</a>
+                                <div class="candidate__date vacancy__date">12 Годин тому</div>
                             </div>
-                            <div class="vacancy__thumbler">
-                                <div class="thumbler">
-                                    <input id="toggle1" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
-                                    <label for="toggle1"></label>
+                            <div class="vacancy__line-second">
+                                <div class="vacancy__salary-location">
+                                    <div class="vacancy__salary">2000-2500$</div>
+                                    <div class="vacancy__location">Київ</div>
+                                </div>
+                                <div class="vacancy__thumbler">
+                                    <div class="thumbler">
+                                        <input id="toggle1" class="thumbler__toggle thumbler__toggle-round" type="checkbox">
+                                        <label for="toggle1"></label>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="vacancy__line-third">
-                            <div class="vacancy__experience">
-                                <div class="candidate__item-line">
-                                    <div class="candidate__item-name">Досвід роботи:</div>
-                                    <div class="candidate__item-value">3 роки</div>
-                                </div>
-                                <div class="candidate__item-line">
-                                    <div class="candidate__item-name">Вид зайнятості:</div>
-                                    <div class="candidate__item-value">Remote</div>
+                            <div class="vacancy__line-third">
+                                <div class="vacancy__experience">
+                                    <div class="candidate__item-line">
+                                        <div class="candidate__item-name">Досвід роботи:</div>
+                                        <div class="candidate__item-value">3 роки</div>
+                                    </div>
+                                    <div class="candidate__item-line">
+                                        <div class="candidate__item-name">Вид зайнятості:</div>
+                                        <div class="candidate__item-value">Remote</div>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="vacancy__description">We are looking for a Backend Developer who is motivated to combine the art of design with the art of programming...</div>
-                        <ul class="vacancy__tags">
-                            <li class="vacancy__tag">Python</li>
-                            <li class="vacancy__tag">Django</li>
-                            <li class="vacancy__tag">DRF</li>
-                        </ul>
-                        <div class="vacancy__contact">
-                            <a href="#" class="vacancy__recruiter">Alexander Ruban</a>, <span class="vacancy__position">Ceo</span> в <span class="vacancy__company">Interview.top</span>
+                            <div class="vacancy__description">We are looking for a Backend Developer who is motivated to combine the art of design with the art of programming...</div>
+                            <ul class="vacancy__tags">
+                                <li class="vacancy__tag">Python</li>
+                                <li class="vacancy__tag">Django</li>
+                                <li class="vacancy__tag">DRF</li>
+                            </ul>
+                            <div class="vacancy__contact">
+                                <a href="#" class="vacancy__recruiter">Alexander Ruban</a>, <span class="vacancy__position">Ceo</span> в <span class="vacancy__company">Interview.top</span>
+                            </div>
                         </div>
                     </div>
                 </div>
