--- a/src/assets/styles/base.scss
+++ b/src/assets/styles/base.scss
@@ -119,8 +119,13 @@ h2, .h2 {
     line-height: 1.2;
     letter-spacing: 0.05em;
 
-    @media(max-width: 575px) {
+    @media(max-width: 767px) {
       font-size: 18px;
+      margin-bottom: 10px;
+    }
+
+    @media(max-width: 767px) {
+      font-size: 16px;
       margin-bottom: 10px;
     }
   }
