--- a/src/components/dashboard/dashboard.scss
+++ b/src/components/dashboard/dashboard.scss
@@ -98,7 +98,6 @@
 
     @media(max-width: 767px) {
      flex-direction: column;
-      align-items: flex-start;
       margin-bottom: 18px;
     }
   }
@@ -112,6 +111,7 @@
   }
 
   &__name {
+    display: block;
 
     &-rating {
       display: flex;
@@ -121,6 +121,12 @@
         align-items: flex-start;
       }
     }
+
+    @media(max-width: 767px) {
+      max-width: calc(100% - 100px);
+      width: 100%;
+    }
+
   }
 
   &__rating {
@@ -355,11 +361,27 @@
 }
 
 .vacancy {
+  position: relative;
+  margin-bottom: 18px;
+
+  &__thumbler {
+
+    @media(max-width: 767px) {
+      position: absolute;
+      top: 3px;
+      right: 0;
+    }
+
+    @media(max-width: 575px) {
+      top: 1px;
+    }
+  }
+
   &__line {
     &-first {
       align-items: center;
 
-      @media(max-width: 575px) {
+      @media(max-width: 767px) {
         align-items: flex-start;
       }
     }
@@ -425,6 +447,12 @@
       font-size: 14px;
       line-height: 1.2;
     }
+
+    &_right {
+      padding: 0;
+      margin-right: -5px;
+      color: $gray;
+    }
   }
 
   &__location {
@@ -465,6 +493,10 @@
       font-size: 14px;
       line-height: 1.2;
       margin-bottom: 18px;
+    }
+
+    &_empty {
+      margin-bottom: 10px;
     }
   }
 
@@ -745,4 +777,8 @@
       border-bottom: none;
     }
   }
+}
+
+.blue {
+  color: $blue;
 }
