--- a/src/components/main-header/main-header.scss
+++ b/src/components/main-header/main-header.scss
@@ -128,6 +128,11 @@
           width: 100%;
           margin: 20px -7px 0 0;
           padding: 23px 0 4px;
+          z-index: 25;
+
+          @media(max-width: 374px) {
+            right: -35px;
+          }
         }
 
         &__title {
