--- a/src/components/search-form/search-form.scss
+++ b/src/components/search-form/search-form.scss
@@ -151,6 +151,7 @@
         flex-direction: column;
       }
     }
+
   }
 
   &__tag {
@@ -215,6 +216,10 @@
       background-position: center;
       transition: $delay;
       margin-left: 7px;
+    }
+
+    &_disable {
+      display: none;
     }
 
     &.subscribed {
