--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -23,6 +23,9 @@
 @import './search-candidate/search-candidate';
 @import './candidates-profile/candidates-profile';
 @import './candidates-account/candidates-account';
+@import './candidate-recruiters/candidate-recruiters';
+@import './settings-form/settings-form';
+@import './candidates-settings/candidates-settings';
 @import './applicant/applicant';
 @import './main-footer/main-footer';
 @import './modal/modal';
