--- a/src/components/worksheet-form/worksheet-form.hbs
+++ b/src/components/worksheet-form/worksheet-form.hbs
@@ -185,10 +185,14 @@
                 <input id="github" class="worksheet-form__input" value="">
             </div>
             <div class="worksheet-form__line last-line">
-                <label for="resume" class="worksheet-form__label">Резюме</label>
-                <div class="worksheet-form__input-wrapper">
-                    <input id="resume" class="worksheet-form__input" value="">
-                </div>
+                <label for="resume" class="worksheet-form__label-wrap">
+                    <div class="worksheet-form__input-label">Резюме</div>
+                    <div class="worksheet-form__input-wrapper">
+                        <div class="worksheet-form__input worksheet-form__input-wrap">
+                            <input id="resume" type="file" class="worksheet-form__input-file">
+                        </div>
+                    </div>
+                </label>
             </div>
         </div>
         <div class="worksheet-form__buttons">
