--- a/src/pages/index.hbs
+++ b/src/pages/index.hbs
@@ -11,6 +11,8 @@
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 7,8 <a href="./candidates-profile.html">Кандидатський профайл</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 9 <a href="./candidate-search-offers.html">Кандидат переглядає вакансiї</a></li>
                 <li style="list-style: decimal; margin-left: 20px">Ескiз 13 <a href="./candidates-account.html">Кандидатський аккаунт</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 14 <a href="./candidates-settings.html">Кандидатськi налаштуваня</a></li>
+                <li style="list-style: decimal; margin-left: 20px">Ескiз 15 <a href="./candidate-search-recruiters.html">Кандидат переглядає пропозиції рекрутерiв</a></li>
             </ol>
         </div>
     </div>
